<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/constraintLayout"
    android:background="@color/green_darkest"
    tools:context=".view.authentication.login.Login">
        <Button
            android:id="@+id/login_btn"
            android:layout_width="0dp"
            android:layout_height="50dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:onClick="login"
            android:text="@string/login"
            android:background="@drawable/button"
            android:textColor="@color/white"
            app:backgroundTint="@color/black"
            app:layout_constraintBottom_toTopOf="@+id/forgotPassword_btn"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/enterPassword"
            tools:ignore="MissingConstraints" />

    <TextView
        android:id="@+id/welcome_text"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="42dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="41dp"
        android:ellipsize="middle"
        android:gravity="center"
        android:text="@string/welcome"
        android:textColor="@color/white"
        android:textSize="36sp"
        app:layout_constraintBottom_toTopOf="@+id/enterEmail"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="MissingConstraints" />

    <EditText
        android:id="@+id/enterPassword"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="128dp"
        android:backgroundTint="@color/white"
        android:ems="10"
        android:foregroundGravity="center_vertical|center|center_horizontal"
        android:gravity="center|center_horizontal|center_vertical"
        android:hint="Enter Password"
        android:imeOptions="actionDone"
        android:inputType="textPassword"
        android:shadowColor="@color/white"
        android:textColor="@color/white"
        android:textColorHint="@color/white"
        app:layout_constraintBottom_toTopOf="@+id/login_btn"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/enterEmail"
        tools:ignore="MissingConstraints" />

    <Button
        android:id="@+id/create_account_btn"
        style="?android:attr/borderlessButtonStyle"
        android:layout_width="192dp"
        android:layout_height="wrap_content"
        android:foregroundGravity="center_vertical|center|center_horizontal"
        android:gravity="center_horizontal|center_vertical|fill_vertical"
        android:onClick="createAccount"
        android:text="@string/create_account"
        android:textColor="@color/white"
        android:textSize="12sp"
        android:textStyle="normal|italic"
        app:layout_constraintBottom_toBottomOf="@+id/forgotPassword_btn"
        app:layout_constraintEnd_toStartOf="@+id/forgotPassword_btn"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/forgotPassword_btn"
        tools:ignore="MissingConstraints,UnknownId" />

    <EditText
        android:id="@+id/enterEmail"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="11dp"
        android:backgroundTint="@color/white"
        android:ems="10"
        android:foregroundGravity="center_vertical|center_horizontal"
        android:gravity="center_horizontal|center_vertical"
        android:hint="Enter Email"
        android:inputType="textPersonName"
        android:textColor="@color/white"
        android:textColorHighlight="@color/white"
        android:textColorHint="@color/white"
        app:layout_constraintBottom_toTopOf="@+id/enterPassword"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/welcome_text" />

    <Button
        android:id="@+id/forgotPassword_btn"
        style="?android:attr/borderlessButtonStyle"
        android:layout_width="171dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="247dp"
        android:foregroundGravity="center_vertical|center|center_horizontal"
        android:gravity="center_horizontal|center_vertical|fill_vertical"
        android:onClick="sendPasswordReset"
        android:text="Forgot Password"
        android:textColor="@color/white"
        android:textSize="12sp"
        android:textStyle="normal|italic"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/login_btn" />

</androidx.constraintlayout.widget.ConstraintLayout>