<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/green_darkest"
    tools:context=".view.authentication.signup.SignUp">


    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/sign_up_container"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

    <EditText
        android:id="@+id/enter_password2"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="72dp"
        android:backgroundTint="@color/white"
        android:ems="10"
        android:gravity="center_horizontal|center_vertical"
        android:hint="Confirm Password"
        android:imeOptions="actionDone"
        android:inputType="textPassword"
        android:textColor="@color/windowBackground"
        android:textColorHint="@color/white"
        app:layout_constraintBottom_toTopOf="@+id/sign_up_btn"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/enter_password" />

    <EditText
        android:id="@+id/enter_full_name"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:ems="10"
        android:gravity="center_horizontal|center_vertical"
        android:hint="Enter Full Name"
        android:imeOptions="actionDone"
        android:backgroundTint="@color/white"
        android:inputType="textPersonName"
        android:textColor="@color/white"
        android:textColorHint="@color/white"
        app:layout_constraintBottom_toTopOf="@+id/enterEmail"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/welcome_note"
        app:layout_constraintVertical_bias="0.831"
        android:autofillHints="" />

    <EditText
        android:id="@+id/enterEmail"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="21dp"
        android:backgroundTint="@color/white"
        android:ems="10"
        android:gravity="center_horizontal|center_vertical"
        android:hint="Enter Email"
        android:imeOptions="actionDone"
        android:inputType="textPersonName"
        android:textColor="@color/white"
        android:textColorHint="@color/white"
        app:layout_constraintBottom_toTopOf="@+id/enter_password"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/welcome_note"
        android:autofillHints="" />

    <EditText
        android:id="@+id/enter_password"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="22dp"
        android:backgroundTint="@color/white"
        android:ems="10"
        android:gravity="center_horizontal|center_vertical"
        android:hint="Enter Password"
        android:imeOptions="actionDone"
        android:inputType="textPassword"
        android:textColor="@color/windowBackground"
        android:textColorHint="@color/white"
        app:layout_constraintBottom_toTopOf="@+id/enter_password2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/enterEmail" />

    <TextView
        android:id="@+id/welcome_note"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="152dp"
        android:foregroundGravity="center_vertical|center|center_horizontal"
        android:gravity="center_horizontal|center_vertical"
        android:text="@string/welcome"
        android:textColor="@color/cardview_light_background"
        android:textSize="34sp"
        app:layout_constraintBottom_toTopOf="@+id/enterEmail"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/sign_up_btn"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="165dp"
        android:background="@drawable/button"
        android:onClick="signup"
        android:text="@string/sign_up"
        android:textColor="@color/white"
        app:backgroundTint="@color/black"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/enter_password2" />

    <Button
        android:id="@+id/sign_in_btn"
        style="?android:attr/borderlessButtonStyle"
        android:layout_width="108dp"
        android:layout_height="33dp"
        android:layout_marginEnd="16dp"
        android:foregroundGravity="center"
        android:gravity="center_horizontal|center_vertical"
        android:onClick="login"
        android:text="@string/sign_in"
        android:textColor="@color/white"
        android:textColorHint="@color/white"
        android:textSize="12sp"
        android:textStyle="normal|italic"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/sign_up_btn"
        app:layout_constraintVertical_bias="0.0"
        tools:ignore="MissingConstraints,UnknownId" />

    </androidx.constraintlayout.widget.ConstraintLayout>
    <FrameLayout
        android:id="@+id/fragment_container"
        android:layout_width="match_parent"
        android:layout_height="match_parent" />

</androidx.constraintlayout.widget.ConstraintLayout>