<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/green_darkest"
    tools:context=".view.main.Main">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:fillViewport="true"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/app_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:gravity="center|center_horizontal|center_vertical"
                android:text="@string/one_love"
                android:textColor="@color/white"
                android:textColorHighlight="@color/white"
                android:textSize="48sp"
                app:layout_constraintEnd_toStartOf="@id/guidelineEnd"
                app:layout_constraintStart_toStartOf="@id/guidelineStart"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/welcome_note"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="32dp"
                android:gravity="center"
                android:text="@string/personality_based_dating_app"
                android:textColor="@color/white"
                android:textSize="16sp"
                app:layout_constraintBottom_toTopOf="@id/selector"
                app:layout_constraintEnd_toStartOf="@id/guidelineEnd"
                app:layout_constraintStart_toStartOf="@id/guidelineStart"
                app:layout_constraintTop_toBottomOf="@+id/app_title" />


            <TextView
                android:id="@+id/selector"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/login_or_create_account"
                android:textColor="@color/white"
                android:textSize="16sp"
                app:layout_constraintBottom_toTopOf="@id/im_app_icon"
                app:layout_constraintEnd_toStartOf="@id/guidelineEnd"
                app:layout_constraintStart_toStartOf="@id/guidelineStart"
                app:layout_constraintTop_toBottomOf="@+id/welcome_note" />


            <ImageView
                android:id="@+id/im_app_icon"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_marginTop="100dp"
                android:foregroundGravity="center_vertical|center_horizontal"
                app:layout_constraintBottom_toTopOf="@id/tv_policy"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintEnd_toStartOf="@id/guidelineEnd"
                app:layout_constraintHeight_percent="0.2"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toStartOf="@id/guidelineStart"
                app:layout_constraintTop_toBottomOf="@+id/selector"
                app:layout_constraintVertical_bias="0.5"
                app:layout_constraintWidth_percent="0.2"
                app:srcCompat="@drawable/startapp_icon" />

            <TextView
                android:id="@+id/tv_policy"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="100dp"
                android:layout_marginBottom="4dp"
                android:text="@string/privacy_link"
                android:textColor="@color/white"
                app:layout_constraintEnd_toStartOf="@id/guidelineEnd"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="@id/guidelineStart"
                app:layout_constraintTop_toBottomOf="@+id/im_app_icon" />

            <ImageButton
                android:id="@+id/to_sign_in_btn"
                style="?android:attr/borderlessButtonStyle"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:background="@drawable/login_button_background"
                android:gravity="center_horizontal|fill_vertical"
                android:onClick="login"
                android:text="@string/login"
                android:textColor="@color/white"
                android:textSize="14sp"
                app:layout_constraintBottom_toTopOf="@+id/to_sign_up_btn"
                app:layout_constraintEnd_toStartOf="@+id/guidelineEnd"
                app:layout_constraintStart_toStartOf="@id/guidelineStart"
                app:layout_constraintTop_toBottomOf="@+id/tv_policy"
                tools:ignore="MissingConstraints,UnknownId" />

            <TextView
                android:id="@+id/bt_sign_in"
                android:layout_width="0dp"
                android:layout_height="50dp"
                android:gravity="center"
                android:text="@string/login"
                android:textColor="@color/white"
                android:textSize="14sp"

                android:textStyle="bold"
                app:layout_constraintBottom_toBottomOf="@+id/to_sign_in_btn"
                app:layout_constraintEnd_toStartOf="@+id/guidelineEnd"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="@+id/guidelineStart"
                app:layout_constraintTop_toTopOf="@+id/to_sign_in_btn"
                app:layout_constraintVertical_bias="0.0" />


            <Button
                android:id="@+id/to_sign_up_btn"
                style="?android:attr/borderlessButtonStyle"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginBottom="16dp"
                android:background="@drawable/button"
                android:gravity="center_horizontal|fill_vertical"
                android:onClick="SignUp"

                android:text="@string/create_account"
                android:textColor="@color/black"
                android:textSize="14sp"
                android:textStyle="bold"
                app:backgroundTint="@color/white"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@+id/guidelineEnd"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="@id/guidelineStart"
                app:layout_constraintTop_toBottomOf="@+id/to_sign_in_btn"
                app:layout_constraintVertical_bias="0.51"
                tools:ignore="MissingConstraints,UnknownId" />


            <androidx.constraintlayout.widget.Guideline
                android:id="@+id/guidelineStart"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                app:layout_constraintGuide_begin="16dp" />

            <androidx.constraintlayout.widget.Guideline
                android:id="@+id/guidelineEnd"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                app:layout_constraintGuide_end="16dp" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>