...
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/green_darkest"
    tools:context=".view.authentication.login.UpdatePassword">

    <Button
        android:id="@+id/send_reset_link_btn"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:background="@drawable/button"
        android:onClick="resetPassword"
...
        android:textColorHighlight="@color/white"
        android:textColorHint="@color/common_google_signin_btn_text_dark_pressed"
        android:textColorLink="@color/windowBackground"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/email_text"
        tools:ignore="MissingConstraints" />

    <TextView
        android:id="@+id/email_text"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
...
